--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -239,20 +239,38 @@
         .kpi-action-btn.primary:hover { background: #40A9FF; border-color: #40A9FF; }
 
         .indicator-card.alert-style {
-            background: #FFF1F0;
+            background: #FF4D4F;
+            border: none;
+            box-shadow: 0 2px 8px rgba(255,77,79,0.25);
         }
+        .indicator-card.alert-style .label,
         .indicator-card.alert-style .value,
-        .indicator-card.alert-style .trend { color: #CF1322; }
+        .indicator-card.alert-style .value .value-num,
+        .indicator-card.alert-style .value .value-prefix,
+        .indicator-card.alert-style .value .suffix,
+        .indicator-card.alert-style .trend { color: #fff !important; }
         .indicator-card.excellent-style {
-            background: #F6FFED;
+            background: #52C41A;
+            border: none;
+            box-shadow: 0 2px 8px rgba(82,196,26,0.25);
         }
-        .indicator-card.excellent-style .value { color: #389E0D; }
-        .indicator-card.excellent-style .trend { color: #52C41A; }
+        .indicator-card.excellent-style .label,
+        .indicator-card.excellent-style .value,
+        .indicator-card.excellent-style .value .value-num,
+        .indicator-card.excellent-style .value .value-prefix,
+        .indicator-card.excellent-style .value .suffix,
+        .indicator-card.excellent-style .trend { color: #fff !important; }
         .indicator-card.warning-style {
-            background: #FFFBE6;
+            background: #FAAD14;
+            border: none;
+            box-shadow: 0 2px 8px rgba(250,173,20,0.25);
         }
+        .indicator-card.warning-style .label,
         .indicator-card.warning-style .value,
-        .indicator-card.warning-style .trend { color: #D48806; }
+        .indicator-card.warning-style .value .value-num,
+        .indicator-card.warning-style .value .value-prefix,
+        .indicator-card.warning-style .value .suffix,
+        .indicator-card.warning-style .trend { color: #fff !important; }
         .indicator-card.empty-style {
             background: #FAFAFA;
             border: 1px dashed #D9D9D9;
@@ -297,15 +315,22 @@
     </div>
 </div>
 
-<div class="spec-section">
-    <div class="spec-title" style="display: flex; justify-content: space-between; align-items: center;">
-        基础样式
-        <button class="btn-view-code" onclick="toggleCode('code-indicator', this)">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
-            Code
-        </button>
-    </div>
-    <div class="chart-meta" style="margin-bottom: 16px; border-radius: 8px;">
+<!-- 与其它图表页统一：chart-container + chart-card + 图表标题 -->
+<div class="chart-container">
+    <div class="chart-card">
+        <div class="chart-card-header">
+            <div class="header-left">
+                <span class="chart-title">2024年12月 核心经营指标</span>
+            </div>
+            <div class="header-right">
+                <span class="chart-tag blue">指标卡</span>
+                <button class="btn-view-code" onclick="toggleCode('code-indicator', this)">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
+                    Code
+                </button>
+            </div>
+        </div>
+        <div class="chart-meta" style="margin-bottom: 16px; border-radius: 8px;">
         <div class="chart-meta-left">
             <div class="chart-meta-info">
                 <span class="chart-meta-item"><span class="dot"></span>数据源: 销售系统, 核心KPI表</span>
@@ -419,6 +444,7 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
         &lt;ArrowUpOutlined /&gt; 12.5% 较上月
     &lt;/div&gt;
 &lt;/Card&gt;</pre>
+    </div>
     </div>
 </div>
 
