--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -32,18 +32,18 @@
         .indicator-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 16px;
-            margin: 24px 0;
+            gap: 12px;
+            margin: 16px 0;
         }
         @media (max-width: 768px) {
-            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 10px; margin: 12px 0; }
+            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 8px; margin: 12px 0; }
         }
 
-        /* 卡片统一：圆角8px、内边距20px、阴影 0 1px 2px，无顶部横杠 */
+        /* 卡片统一：圆角8px、内边距14px（更紧凑）、阴影 0 1px 2px，无顶部横杠 */
         .indicator-card {
             background: #fff;
             border-radius: 8px;
-            padding: 20px;
+            padding: 14px 16px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             border: 1px solid #F0F0F0;
             position: relative;
@@ -53,51 +53,51 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         @media (max-width: 768px) {
-            .indicator-card { padding: 16px; border-radius: 8px; }
+            .indicator-card { padding: 12px; border-radius: 8px; }
         }
         .indicator-card .label {
-            font-size: 13px;
+            font-size: 12px;
             color: #8C8C8C;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
             font-weight: 400;
         }
-        /* 数值行统一：数字 28px/600，前缀与单位 14px/400，同字体同基线 */
+        /* 数值行统一：数字 24px/600（更紧凑），前缀与单位 13px/400，同字体同基线 */
         .indicator-card .value {
             display: flex;
             align-items: baseline;
             flex-wrap: wrap;
             font-family: inherit;
-            font-size: 28px;
+            font-size: 24px;
             font-weight: 600;
             color: #262626;
             line-height: 1.2;
             margin-bottom: 4px;
         }
         .indicator-card .value .value-num {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: 600;
             color: inherit;
         }
         .indicator-card .value .value-prefix,
         .indicator-card .value .suffix {
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 400;
             color: #8C8C8C;
             margin-left: 2px;
         }
         .indicator-card .value .value-prefix { margin-left: 0; margin-right: 2px; }
         .indicator-card .trend {
-            margin-top: 8px;
-            font-size: 12px;
+            margin-top: 6px;
+            font-size: 11px;
             font-weight: 400;
         }
         @media (max-width: 768px) {
-            .indicator-card .value { font-size: 22px; }
-            .indicator-card .value .value-num { font-size: 22px; }
-            .indicator-card .label { font-size: 12px; }
-            .indicator-card .trend { font-size: 11px; }
+            .indicator-card .value { font-size: 20px; }
+            .indicator-card .value .value-num { font-size: 20px; }
+            .indicator-card .label { font-size: 11px; }
+            .indicator-card .trend { font-size: 10px; }
             .indicator-card .value .value-prefix,
-            .indicator-card .value .suffix { font-size: 13px; }
+            .indicator-card .value .suffix { font-size: 12px; }
         }
         .trend-up { color: #52C41A; }
         .trend-down { color: #FF4D4F; }
